--- a/Login Form with floating placeholder and light button/src/index.html
+++ b/Login Form with floating placeholder and light button/src/index.html
@@ -1,12 +1,20 @@
-<div class="bg">
-  <div class="login-form">
-    <h2 class="">Login</h2>
-    <div>
-      <input class='username' placeholder='Username'/>
+<div class="login-form">
+  <h2>Login</h2>
+  <form>
+    <div class="user-box">
+      <input type="text" name="" required="" />
+      <label>Username</label>
     </div>
-    <div>
-      <input class='password' placeholder='Password'/>
+    <div class="user-box">
+      <input type="password" name="" required="" />
+      <label>Password</label>
     </div>
-    <button>submit</button>
-  </div>
+    <a href="#">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      Submit
+    </a>
+  </form>
 </div>
