feat : header 디자인까지

--- a/Tailwind - Simple Parallax Background Images/src/index.html
+++ b/Tailwind - Simple Parallax Background Images/src/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="../dist/output.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
-    <header>
-        <div>
-            <p>November 1, 2019</p>
-            <h1>article title</h1>
+<body class="scroll-smooth">
+    <header class="bg-header h-screen grid place-items-center ">
+        <div class="my-10 p-3 bg-white  font-serif text-center">
+            <p class="italic text-xs">November 1, 2019</p>
+            <h1 class="uppercase font-bold text-5xl">article title</h1>
             <p>Author Name</p>
         </div>
     </header>
@@ -43,6 +43,22 @@
                 Tempore, quaerat accusamus ad nostrum maiores numquam, ea nam sed reiciendis, eveniet perspiciatis. Eos nulla vel consectetur quo nesciunt aspernatur sint nemo cumque optio mollitia, veritatis, tenetur quibusdam eum natus.
             </div>
             
+        </section>
+
+        <section>
+            <h1>"Large, bold pull quote. Hats. Very good."</h1>
+        </section>
+
+        <section>
+            <div>
+                Quae commodi reiciendis dignissimos. Rerum molestiae hic dolores assumenda dolor! Corrupti reiciendis maxime fuga, recusandae obcaecati officia cum temporibus dicta quibusdam praesentium, magni, cumque aperiam iusto sequi illum molestiae non.
+                <br /><br />
+                In excepturi repellendus eum, qui corrupti rerum perferendis harum adipisci voluptate? Nihil, quidem deleniti libero officia dicta vel asperiores velit molestiae blanditiis, dolore voluptatibus excepturi laudantium at veniam illo. Dolor!
+                <br /><br />
+                Neque laudantium minus doloremque id quas quod sint velit corporis unde dolore accusantium delectus optio consequuntur voluptatem sapiente odit dolorum minima harum tenetur, dolor provident reprehenderit. Ex eum provident harum?
+                <br /><br />
+                Mollitia temporibus maxime placeat culpa distinctio possimus, praesentium, assumenda quasi eum voluptate magni aspernatur aperiam. Eius voluptates rem eum, facilis inventore hic provident pariatur nam non! At odit iste cum.
+            </div>
         </section>
     </main>
 </body>
