--- a/Tailwind - Simple Parallax Background Images/src/index.html
+++ b/Tailwind - Simple Parallax Background Images/src/index.html
@@ -6,17 +6,17 @@
     <link href="../dist/output.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body class="scroll-smooth">
+<body class="scroll-smooth  font-serif ">
     <header class="bg-header h-screen grid place-items-center ">
-        <div class="my-10 p-3 bg-white  font-serif text-center">
+        <div class="my-10 p-3 bg-white text-center">
             <p class="italic text-xs">November 1, 2019</p>
             <h1 class="uppercase font-bold text-5xl">article title</h1>
             <p>Author Name</p>
         </div>
     </header>
     <main>
-        <section>
-            <div>
+        <section class="px-3 py-10 text-lg">
+            <div class="py-5">
                 THIS IS A SIMPLE PARALLAX EFFECT CREATED BY SETTING THE BACKGROUND ATTACHMENT PROPERTY TO A FIXED POSITION. THIS TECHNIQUE IS NOT MEANT FOR NON-DECORATIVE IMAGES, VIDEOS, ETC. AS THOSE REQUIRE ADDITIONAL HTML AND CSS TO WORK PROPERLY.
             </div>
             <div class="">
@@ -42,7 +42,6 @@
                 <br/><br/>
                 Tempore, quaerat accusamus ad nostrum maiores numquam, ea nam sed reiciendis, eveniet perspiciatis. Eos nulla vel consectetur quo nesciunt aspernatur sint nemo cumque optio mollitia, veritatis, tenetur quibusdam eum natus.
             </div>
-            
         </section>
 
         <section>
