fix : section1 폰트크기수정

--- a/Tailwind - Simple Parallax Background Images/src/index.html
+++ b/Tailwind - Simple Parallax Background Images/src/index.html
@@ -14,9 +14,9 @@
             <p>Author Name</p>
         </div>
     </header>
-    <main>
-        <section class="px-3 py-10 text-lg">
-            <div class="py-5">
+    <main class="px-3 py-14 text-lg">
+        <section >
+            <div class="pb-5 text-xl">
                 THIS IS A SIMPLE PARALLAX EFFECT CREATED BY SETTING THE BACKGROUND ATTACHMENT PROPERTY TO A FIXED POSITION. THIS TECHNIQUE IS NOT MEANT FOR NON-DECORATIVE IMAGES, VIDEOS, ETC. AS THOSE REQUIRE ADDITIONAL HTML AND CSS TO WORK PROPERLY.
             </div>
             <div class="">
