--- a/Tailwind - Simple Parallax Background Images/src/index.html
+++ b/Tailwind - Simple Parallax Background Images/src/index.html
@@ -1,64 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../dist/output.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="../dist/output.css" rel="stylesheet" />
     <title>Document</title>
-</head>
-<body class="scroll-smooth  font-serif ">
-    <header class="bg-header h-screen grid place-items-center ">
-        <div class="my-10 p-3 bg-white text-center">
-            <p class="italic text-xs">November 1, 2019</p>
-            <h1 class="uppercase font-bold text-5xl">article title</h1>
-            <p>Author Name</p>
-        </div>
+  </head>
+  <body class="scroll-smooth font-serif">
+    <header class="bg-header h-screen grid place-items-center">
+      <div class="my-10 p-3 bg-white text-center">
+        <p class="italic text-xs">November 1, 2019</p>
+        <h1 class="uppercase font-bold text-5xl">article title</h1>
+        <p>Author Name</p>
+      </div>
     </header>
     <main class="px-3 py-14 text-lg">
-        <section >
-            <div class="pb-5 text-xl">
-                THIS IS A SIMPLE PARALLAX EFFECT CREATED BY SETTING THE BACKGROUND ATTACHMENT PROPERTY TO A FIXED POSITION. THIS TECHNIQUE IS NOT MEANT FOR NON-DECORATIVE IMAGES, VIDEOS, ETC. AS THOSE REQUIRE ADDITIONAL HTML AND CSS TO WORK PROPERLY.
-            </div>
-            <div class="">
-                Quae commodi reiciendis dignissimos. Rerum molestiae hic dolores assumenda dolor! Corrupti reiciendis maxime fuga, recusandae obcaecati officia cum temporibus dicta quibusdam praesentium, magni, cumque aperiam iusto sequi illum molestiae non.
-                <br/><br/>
-                In excepturi repellendus eum, qui corrupti rerum perferendis harum adipisci voluptate? Nihil, quidem deleniti libero officia dicta vel asperiores velit molestiae blanditiis, dolore voluptatibus excepturi laudantium at veniam illo. Dolor!
-                <br/><br/>
-                Neque laudantium minus doloremque id quas quod sint velit corporis unde dolore accusantium delectus optio consequuntur voluptatem sapiente odit dolorum minima harum tenetur, dolor provident reprehenderit. Ex eum provident harum?
-                <br/><br/>
-                Mollitia temporibus maxime placeat culpa distinctio possimus, praesentium, assumenda quasi eum voluptate magni aspernatur aperiam. Eius voluptates rem eum, facilis inventore hic provident pariatur nam non! At odit iste cum.
-                <br/><br/>
-                Cumque voluptatibus laboriosam tempore architecto laudantium sint vitae cupiditate voluptate quod tempora saepe odio quasi dolores possimus non totam unde voluptates corrupti, ducimus ipsa enim officiis ipsum maxime eveniet. Aut!
-                <br/><br/>
-                Maxime facere ut natus libero incidunt alias quam consectetur, nisi delectus exercitationem ab qui perferendis dolorem sequi veritatis nobis eius quas dolore ducimus atque vel. Doloribus mollitia non pariatur modi?
-                <br/><br/>
-                Sed in amet a neque, delectus, cupiditate ab assumenda quidem facere molestias vitae itaque soluta reprehenderit dolorem. Deserunt quibusdam, consequatur veniam fugiat ipsam aliquam ea possimus quis officiis enim dolores.
-                <br/><br/>
-                Exercitationem aperiam veniam perspiciatis iure ad nobis necessitatibus cumque cupiditate obcaecati natus. Neque nostrum maxime id veritatis tempore, a voluptate voluptatem et! A ullam id aliquam? Recusandae deleniti odit fugit!
-                <br/><br/>
-                Beatae rerum obcaecati consectetur nostrum eos ipsam, accusamus delectus ex maxime neque sit quod repellendus voluptate sunt dolore hic explicabo ea dolorum vero vel quidem illo! Cupiditate sed voluptatibus ullam?
-                <br/><br/>
-                Modi aliquam facilis adipisci! Soluta eveniet eos omnis, inventore nesciunt, laborum deserunt blanditiis nihil accusamus debitis voluptatibus possimus dolores vero maiores, sed voluptate ut! Facilis possimus vitae consectetur praesentium veritatis.
-                <br/><br/>
-                Tempore, quaerat accusamus ad nostrum maiores numquam, ea nam sed reiciendis, eveniet perspiciatis. Eos nulla vel consectetur quo nesciunt aspernatur sint nemo cumque optio mollitia, veritatis, tenetur quibusdam eum natus.
-            </div>
-        </section>
+      <section>
+        <div class="pb-5 text-xl">
+          THIS IS A SIMPLE PARALLAX EFFECT CREATED BY SETTING THE BACKGROUND
+          ATTACHMENT PROPERTY TO A FIXED POSITION. THIS TECHNIQUE IS NOT MEANT
+          FOR NON-DECORATIVE IMAGES, VIDEOS, ETC. AS THOSE REQUIRE ADDITIONAL
+          HTML AND CSS TO WORK PROPERLY.
+        </div>
+        <div class="">
+          Quae commodi reiciendis dignissimos. Rerum molestiae hic dolores
+          assumenda dolor! Corrupti reiciendis maxime fuga, recusandae obcaecati
+          officia cum temporibus dicta quibusdam praesentium, magni, cumque
+          aperiam iusto sequi illum molestiae non.
+          <br /><br />
+          In excepturi repellendus eum, qui corrupti rerum perferendis harum
+          adipisci voluptate? Nihil, quidem deleniti libero officia dicta vel
+          asperiores velit molestiae blanditiis, dolore voluptatibus excepturi
+          laudantium at veniam illo. Dolor!
+          <br /><br />
+          Neque laudantium minus doloremque id quas quod sint velit corporis
+          unde dolore accusantium delectus optio consequuntur voluptatem
+          sapiente odit dolorum minima harum tenetur, dolor provident
+          reprehenderit. Ex eum provident harum?
+          <br /><br />
+          Mollitia temporibus maxime placeat culpa distinctio possimus,
+          praesentium, assumenda quasi eum voluptate magni aspernatur aperiam.
+          Eius voluptates rem eum, facilis inventore hic provident pariatur nam
+          non! At odit iste cum.
+          <br /><br />
+          Cumque voluptatibus laboriosam tempore architecto laudantium sint
+          vitae cupiditate voluptate quod tempora saepe odio quasi dolores
+          possimus non totam unde voluptates corrupti, ducimus ipsa enim
+          officiis ipsum maxime eveniet. Aut!
+          <br /><br />
+          Maxime facere ut natus libero incidunt alias quam consectetur, nisi
+          delectus exercitationem ab qui perferendis dolorem sequi veritatis
+          nobis eius quas dolore ducimus atque vel. Doloribus mollitia non
+          pariatur modi?
+          <br /><br />
+          Sed in amet a neque, delectus, cupiditate ab assumenda quidem facere
+          molestias vitae itaque soluta reprehenderit dolorem. Deserunt
+          quibusdam, consequatur veniam fugiat ipsam aliquam ea possimus quis
+          officiis enim dolores.
+          <br /><br />
+          Exercitationem aperiam veniam perspiciatis iure ad nobis
+          necessitatibus cumque cupiditate obcaecati natus. Neque nostrum maxime
+          id veritatis tempore, a voluptate voluptatem et! A ullam id aliquam?
+          Recusandae deleniti odit fugit!
+          <br /><br />
+          Beatae rerum obcaecati consectetur nostrum eos ipsam, accusamus
+          delectus ex maxime neque sit quod repellendus voluptate sunt dolore
+          hic explicabo ea dolorum vero vel quidem illo! Cupiditate sed
+          voluptatibus ullam?
+          <br /><br />
+          Modi aliquam facilis adipisci! Soluta eveniet eos omnis, inventore
+          nesciunt, laborum deserunt blanditiis nihil accusamus debitis
+          voluptatibus possimus dolores vero maiores, sed voluptate ut! Facilis
+          possimus vitae consectetur praesentium veritatis.
+          <br /><br />
+          Tempore, quaerat accusamus ad nostrum maiores numquam, ea nam sed
+          reiciendis, eveniet perspiciatis. Eos nulla vel consectetur quo
+          nesciunt aspernatur sint nemo cumque optio mollitia, veritatis,
+          tenetur quibusdam eum natus.
+        </div>
+      </section>
 
-        <section>
-            <h1>"Large, bold pull quote. Hats. Very good."</h1>
-        </section>
+      <section class="bg-quote h-screen my-10 grid place-items-center p-5">
+        <div class="p-10 bg-black text-white text-center">
+          <h1 class="text-3xl italic">
+            "Large, bold pull quote. Hats. Very good."
+          </h1>
+        </div>
+      </section>
 
-        <section>
-            <div>
-                Quae commodi reiciendis dignissimos. Rerum molestiae hic dolores assumenda dolor! Corrupti reiciendis maxime fuga, recusandae obcaecati officia cum temporibus dicta quibusdam praesentium, magni, cumque aperiam iusto sequi illum molestiae non.
-                <br /><br />
-                In excepturi repellendus eum, qui corrupti rerum perferendis harum adipisci voluptate? Nihil, quidem deleniti libero officia dicta vel asperiores velit molestiae blanditiis, dolore voluptatibus excepturi laudantium at veniam illo. Dolor!
-                <br /><br />
-                Neque laudantium minus doloremque id quas quod sint velit corporis unde dolore accusantium delectus optio consequuntur voluptatem sapiente odit dolorum minima harum tenetur, dolor provident reprehenderit. Ex eum provident harum?
-                <br /><br />
-                Mollitia temporibus maxime placeat culpa distinctio possimus, praesentium, assumenda quasi eum voluptate magni aspernatur aperiam. Eius voluptates rem eum, facilis inventore hic provident pariatur nam non! At odit iste cum.
-            </div>
-        </section>
+      <section>
+        <div>
+          Quae commodi reiciendis dignissimos. Rerum molestiae hic dolores
+          assumenda dolor! Corrupti reiciendis maxime fuga, recusandae obcaecati
+          officia cum temporibus dicta quibusdam praesentium, magni, cumque
+          aperiam iusto sequi illum molestiae non.
+          <br /><br />
+          In excepturi repellendus eum, qui corrupti rerum perferendis harum
+          adipisci voluptate? Nihil, quidem deleniti libero officia dicta vel
+          asperiores velit molestiae blanditiis, dolore voluptatibus excepturi
+          laudantium at veniam illo. Dolor!
+          <br /><br />
+          Neque laudantium minus doloremque id quas quod sint velit corporis
+          unde dolore accusantium delectus optio consequuntur voluptatem
+          sapiente odit dolorum minima harum tenetur, dolor provident
+          reprehenderit. Ex eum provident harum?
+          <br /><br />
+          Mollitia temporibus maxime placeat culpa distinctio possimus,
+          praesentium, assumenda quasi eum voluptate magni aspernatur aperiam.
+          Eius voluptates rem eum, facilis inventore hic provident pariatur nam
+          non! At odit iste cum.
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
