feat :  참고했던 소스보면서 코드 수정 중. main의 width 부분 수정전

--- a/Tailwind - Simple Parallax Background Images/src/index.html
+++ b/Tailwind - Simple Parallax Background Images/src/index.html
@@ -6,23 +6,23 @@
     <link href="../dist/output.css" rel="stylesheet" />
     <title>Document</title>
   </head>
-  <body class="scroll-smooth font-serif">
-    <header class="bg-header h-screen grid place-items-center">
-      <div class="my-10 p-3 bg-white text-center">
-        <p class="italic text-xs">November 1, 2019</p>
-        <h1 class="uppercase font-bold text-5xl">article title</h1>
-        <p>Author Name</p>
+  <body class="font-serif">
+    <header class="bg-header h-screen grid place-items-center pb-12">
+      <div class="mx-4 p-4 bg-white text-center md:p-8">
+        <p class="italic text-sm">November 1, 2019</p>
+        <h1 class="uppercase text-5xl">article title</h1>
+        <p class="text-lg">Author Name</p>
       </div>
     </header>
-    <main class="px-3 py-14 text-lg">
-      <section>
-        <div class="pb-5 text-xl">
-          THIS IS A SIMPLE PARALLAX EFFECT CREATED BY SETTING THE BACKGROUND
-          ATTACHMENT PROPERTY TO A FIXED POSITION. THIS TECHNIQUE IS NOT MEANT
-          FOR NON-DECORATIVE IMAGES, VIDEOS, ETC. AS THOSE REQUIRE ADDITIONAL
-          HTML AND CSS TO WORK PROPERLY.
+    <main class="w-screen mx-auto px-4 max-w-lg leading-normal text-lg">
+      <section class="py-12">
+        <div class="mb-6 text-xl md:text-2xl uppercase">
+          This is a simple parallax effect created by setting the background
+          attachment property to a fixed position. This technique is not meant
+          for non-decorative images, videos, etc. as those require additional
+          HTML and CSS to work properly.
         </div>
-        <div class="">
+        <div>
           Quae commodi reiciendis dignissimos. Rerum molestiae hic dolores
           assumenda dolor! Corrupti reiciendis maxime fuga, recusandae obcaecati
           officia cum temporibus dicta quibusdam praesentium, magni, cumque
@@ -80,15 +80,15 @@
         </div>
       </section>
 
-      <section class="bg-quote h-screen my-10 grid place-items-center p-5">
-        <div class="p-10 bg-black text-white text-center">
-          <h1 class="text-3xl italic">
-            "Large, bold pull quote. Hats. Very good."
-          </h1>
-        </div>
+      <section class="bg-quote h-screen mx-auto grid place-items-center p-5">
+        <blockquote class="bg-black mx-4 p-4 text-center text-white md:p-8">
+          <p class="font-bold italic text-3xl">
+            &ldquo;Large, bold pull quote. Hats. Very good.&rdquo;
+          </p>
+        </blockquote>
       </section>
 
-      <section>
+      <section class="py-12">
         <div>
           Quae commodi reiciendis dignissimos. Rerum molestiae hic dolores
           assumenda dolor! Corrupti reiciendis maxime fuga, recusandae obcaecati
