feat : main max-width 변경

--- a/Tailwind - Simple Parallax Background Images/src/index.html
+++ b/Tailwind - Simple Parallax Background Images/src/index.html
@@ -14,7 +14,7 @@
         <p class="text-lg">Author Name</p>
       </div>
     </header>
-    <main class="w-screen mx-auto px-4 max-w-lg leading-normal text-lg">
+    <main class="max-w-3xl mx-auto px-4 leading-normal text-lg">
       <section class="py-12">
         <div class="mb-6 text-xl md:text-2xl uppercase">
           This is a simple parallax effect created by setting the background
