--- a/CSS God Rays/src/index.html
+++ b/CSS God Rays/src/index.html
@@ -3,24 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"
-    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: "class",
+      };
+    </script>
     <title>Document</title>
   </head>
   <body>
-    <main class="w-screen h-screen grid place-items-center">
+    <main
+      class="w-screen h-screen grid place-items-center bg-white dark:bg-black"
+    >
       <div class="text-center">
-        <h1 class="mb-4 text-5xl font-bold">
+        <h1
+          class="flex items-center mb-4 text-5xl font-bold text-gray-800 dark:text-white/80 transition-colors"
+        >
           charm<span
-            class="ml-2 px-2 pb-1 rounded-xl bg-black text-white uppercase text-3xl"
-            >ui</span
+            class="ml-1 rounded-xl bg-current p-2 text-[0.7em] leading-none"
+            ><span class="text-white dark:text-black uppercase">ui</span></span
           >
         </h1>
         <button
           onclick="toggleTheme()"
-          class="px-3 py-1 rounded-2xl bg-white/40 border border-gray-200 hover:border-gray-300 text-gray-600 text-center"
+          class="px-3 py-1 rounded-full bg-white/40 dark:bg-black/40 backdrop-blur-lg border border-stone-200 hover:border-stone-300 dark:border-stone-500 dark:hover:border-stone-400 text-stone-800 dark:text-white drop-shadow-sm text-sm transition-colors"
         >
           Toggle Theme
         </button>
